<resources>
	<string name="app_name">Event Search</string>
	<string name="title_activity_event_search">EventSearchActivity</string>
	<string name="main_tab_search_text">SEARCH</string>
	<string name="main_tab_favorite_text">FAVORITE</string>
	<string name="action_settings">Settings</string>

	<!-- Search form related strings -->
	<string name="search_label_keyword">Keyword</string>
	<string name="search_label_category">Category</string>
	<string name="search_label_distance">Distance</string>
	<string name="search_label_from">From</string>
	<string name="search_label_current_location">Current location</string>
	<string name="search_label_other_location">Other, Specify Location</string>
	<string name="search_message_required_fields">Please enter mandatory field</string>
	<string name="search_hint_keyword">Enter keyword</string>
	<string name="search_hint_distance">10</string>
	<string name="search_hint_location">Type in the Location</string>
	<string name="search_button_submit">SEARCH</string>
	<string name="search_button_clear">CLEAR</string>

	<!-- Favorite list -->
	<string name="favorite_list_empty">No Favorites</string>

	<!-- Search result list -->
	<string name="search_result_list_loading">Searching Events...</string>
	<string name="search_result_list_empty">No results</string>

	<!-- Event detail -->
	<string name="event_detail_tab_event">EVENT</string>
	<string name="event_detail_tab_artist">ARTIST(S)</string>
	<string name="event_detail_tab_venue">VENUE</string>
	<string name="event_detail_tab_upcoming">UPCOMING</string>
	<string name="upcoming_event_list_empty">No Record</string>
	<string name="title_activity_event_detail">EventDetailActivity</string>
	<string name="event_detail_loading">Loading ...</string>

	<string name="section_format">Hello World from section: %1$d</string>

	<!-- Event info -->
	<string name="event_info_ticketmaster"><u>Ticketmaster</u></string>
	<string name="event_info_view_here"><u>View Here</u></string>

	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="title_activity_maps">Map</string>
</resources>
